Envoy/envoy.old.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol:  TCP
      address: 127.0.0.1
      port_value: 9901
      
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 10000
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                types_config:
                  "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionnManager
                  stat_prefix: ingress_http
                  route_config:
                    name: local_route
                    virtual_hosts:
                      - name: local_service
                        domains: ["*"]
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              host_rewrite: www.google.com
                              cluster: service_google
                  route_filters:
                    - name: envoy.filters.http.router
        clusters:
          - name: service_google
            connect_timeout: 0.25s
            type: LOGICAL_DNS
            # Connect out the following line to test on v6 network
            dns_lookup_family: V4_ONLY
            lb_policy: ROUND_ROBIN
            load_assignment:
              cluster_name: service_google
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          socker_address:
                            address: www.google.com
                            port_value: 443
            transport_socket:
              name: envoy.transport_socket_tls
              typed_config:
                "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
                  sni: www.google.com
