Envoy/envoy_with_tls.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/product"
                          route:
                            prefix_rewrite: "/product"
                            cluster: product_service
                        - match:
                            prefix: "/auth"
                          route:
                            prefix_rewrite: "/auth"
                            cluster: auth_service
                http_filters:
                  - name: envoy.filters.http.router
    - name: listener_1
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/product"
                          route:
                            prefix_rewrite: "/product"
                            cluster: secure_product_service
                        - match:
                            prefix: "/auth"
                          route:
                            prefix_rewrite: "/auth"
                            cluster: tea_service
                http_filters:
                  - name: envoy.filters.http.router
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/ssl/certs/https.crt"
                  private_key:
                    filename: "/etc/ssl/certs/key.pem"
  clusters:
    - name: product_service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: product_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mango.services.productapi
                      port_value: 80
    - name: auth_service
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        # Comment out the following line to test on v6 networks
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: auth_service
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: mango.services.authapi
                        port_value: 80
    # - name: secure_coffee_service
    #   connect_timeout: 0.25s
    #   type: LOGICAL_DNS
    #   # Comment out the following line to test on v6 networks
    #   dns_lookup_family: V4_ONLY
    #   lb_policy: ROUND_ROBIN
    #   load_assignment:
    #     cluster_name: secure_coffee_service
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: coffeeapi
    #                   port_value: 443
    #   transport_socket:
    #     name: envoy.transport_sockets.tls
    #     typed_config:
    #       "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    #       sni: localhost
